--- a/data_visualization/package.json
+++ b/data_visualization/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "taobao_bra_web_display",
+  "name": "taobao_bra_data_visualization",
   "version": "1.0.0",
-  "description": "taobao bra data displayer",
+  "description": "taobao bra data visualization",
   "author": "nladuo <kalen25115@gmail.com>",
   "private": true,
   "scripts": {
@@ -12,7 +12,8 @@
   "dependencies": {
     "babel-runtime": "^6.0.0",
     "echarts": "^3.2.3",
-    "vue": "^1.0.21"
+    "vue": "^1.0.21",
+    "vue-echarts": "^0.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
