modified:   README.md

--- a/data_visualization/package.json
+++ b/data_visualization/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taobao_bra_data_visualization",
+  "name": "data_visualization",
   "version": "1.0.0",
   "description": "taobao bra data visualization",
   "author": "nladuo <kalen25115@gmail.com>",
