--- a/data_visualization/package.json
+++ b/data_visualization/package.json
@@ -11,9 +11,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
-    "echarts": "^3.2.3",
-    "vue": "^1.0.21",
-    "vue-echarts": "^0.1.1"
+    "vue": "^1.0.21"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
